Initial source code

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 main = "./src/index.ts"
-name = "discord-bot-worker"
+name = "mokbot"
 compatibility_date = "2023-08-15"
 
 kv_namespaces = [
@@ -13,3 +13,6 @@ DISCORD_APP_ID = "EDIT_ME"
 DISCORD_APP_PUBLIC_KEY = "EDIT_ME"
 ROBLOX_BADGE_LIMIT = "25"
 CACHE_NODE_EXPIRATION_SECONDS = "86400"
+
+[placement]
+mode = "smart"
